welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: not found: type color
	def faireMotif1(c:color) {
                          ^PatternPicture:4: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
	       setCouleurBrosse()
                               ^PatternPicture:22: error: not found: value faireC
			faireC(Color.YELLOW)
                        ^PatternPicture:23: error: not found: value faireC
			faireC(Color.RED)
                        ^PatternPicture:24: error: not found: value faireC
			faireC(Color.BLUE)
                        ^PatternPicture:25: error: not found: value faireC
			faireC(Color.GREEN)
                        ^